--- a/src/themes/default/partials/_frames.scss
+++ b/src/themes/default/partials/_frames.scss
@@ -12,6 +12,7 @@ See the LICENSE file or http://opensource.org/licenses/MIT for more information.
     display: flex;
     flex-direction: column;
     position: relative;
+    overflow: hidden;
 
     & > &-head {
         background: var(--inactive-titlebar-bg);
@@ -86,6 +87,7 @@ See the LICENSE file or http://opensource.org/licenses/MIT for more information.
         color: var(--frame-fg);
         border-top: 1px solid #000;
         margin: 0;
+        overflow: hidden;
 
         hr {
             border-top: 1px solid #555;
